// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Borough component marked as favorite 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-3 border rounded bg-light p-2"
      >
        <div
          class="col-md-12"
        >
          <h5
            class="fw-bold"
          >
            #
            01
             
            borough
          </h5>
          <h5>
            Code: 
            123a
          </h5>
          <h5>
            Area Hectares: 
            10
          </h5>
          <button
            class="btn btn-primary w-100"
          >
            View on Map
          </button>
          <button
            class="btn  btn-warning w-100 mt-2"
          >
            Remove from Favorites
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-3 border rounded bg-light p-2"
    >
      <div
        class="col-md-12"
      >
        <h5
          class="fw-bold"
        >
          #
          01
           
          borough
        </h5>
        <h5>
          Code: 
          123a
        </h5>
        <h5>
          Area Hectares: 
          10
        </h5>
        <button
          class="btn btn-primary w-100"
        >
          View on Map
        </button>
        <button
          class="btn  btn-warning w-100 mt-2"
        >
          Remove from Favorites
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should render Borough component not marked as favorite 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="row mb-3 border rounded bg-light p-2"
      >
        <div
          class="col-md-12"
        >
          <h5
            class="fw-bold"
          >
            #
            01
             
            borough
          </h5>
          <h5>
            Code: 
            123a
          </h5>
          <h5>
            Area Hectares: 
            10
          </h5>
          <button
            class="btn btn-primary w-100"
          >
            View on Map
          </button>
          <button
            class="btn  btn-outline-warning w-100 mt-2"
          >
            Save as Favorite
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="row mb-3 border rounded bg-light p-2"
    >
      <div
        class="col-md-12"
      >
        <h5
          class="fw-bold"
        >
          #
          01
           
          borough
        </h5>
        <h5>
          Code: 
          123a
        </h5>
        <h5>
          Area Hectares: 
          10
        </h5>
        <button
          class="btn btn-primary w-100"
        >
          View on Map
        </button>
        <button
          class="btn  btn-outline-warning w-100 mt-2"
        >
          Save as Favorite
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
